[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/SpeedLabel.gd" type="Script" id=1]
[ext_resource path="res://Objects/TestLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Intro.gd" type="Script" id=3]
[ext_resource path="res://Objects/ExternalCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/VehicleManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/EngineStateLabel.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ThrottleLabel.gd" type="Script" id=7]
[ext_resource path="res://Scripts/RPMLabel.gd" type="Script" id=8]
[ext_resource path="res://Scripts/GearLabel.gd" type="Script" id=9]
[ext_resource path="res://Scripts/PowerLabel.gd" type="Script" id=10]
[ext_resource path="res://Scripts/BrakeLabel.gd" type="Script" id=11]
[ext_resource path="res://Textures/default-font.tres" type="DynamicFont" id=12]
[ext_resource path="res://Scripts/gameRoot.gd" type="Script" id=13]
[ext_resource path="res://Scenes/DebugUI.gd" type="Script" id=14]
[ext_resource path="res://Scenes/NetworkManager.gd" type="Script" id=15]
[ext_resource path="res://Scripts/NWmode.gd" type="Script" id=16]

[sub_resource type="GDScript" id=1]
script/source = "extends Label

func _process(_delta):
	text = \"FPS: \" + String((Performance.get_monitor(Performance.TIME_FPS)))
"

[sub_resource type="GDScript" id=2]
script/source = "extends Label

func _process(_delta):
	text = \"Physics frame time (ms): \" + String((Performance.get_monitor(Performance.TIME_PHYSICS_PROCESS ) * 1000))
"

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.133333 )

[node name="gameRoot" type="Node"]
script = ExtResource( 13 )

[node name="VehicleManager" parent="." instance=ExtResource( 5 )]

[node name="TestLevel" parent="." instance=ExtResource( 2 )]

[node name="CameraRig" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 5, -6 )

[node name="DebugUI" type="Control" parent="."]
margin_right = 1979.0
margin_bottom = 1026.0
mouse_filter = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 20.0
margin_right = -289.0
margin_bottom = -292.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press ` to enable/disable viewing of forces.
Press ESC to restrict/unrestrict mouse to window.
Press R to reset vehicle."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 70.568
margin_right = -582.0
margin_bottom = -275.432
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FPS: 0"
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhysicsMS" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 88.2542
margin_right = -515.0
margin_bottom = -254.746
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Physics (ms): 0"
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NWmode" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 105.118
margin_right = -515.0
margin_bottom = -237.882
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Network Mode:"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngineState" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 159.424
margin_right = -515.0
margin_bottom = -183.576
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Engine OFF"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gear" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 194.963
margin_right = -515.0
margin_bottom = -148.037
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gear: N"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPM" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 176.57
margin_right = -515.0
margin_bottom = -166.43
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RPM: 0"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 213.298
margin_right = -515.0
margin_bottom = -129.702
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed: 0"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Throttle" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 232.325
margin_right = -515.0
margin_bottom = -110.675
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Throttle: 0"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brake" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 250.0
margin_right = -515.0
margin_bottom = -96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Brake: 0"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Label" parent="DebugUI"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 268.406
margin_right = -468.0
margin_bottom = -74.5945
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Power output:"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Intro" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Intro"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
mouse_filter = 1
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CanvasLayer/Intro/Panel"]
margin_left = 927.0
margin_top = 100.0
margin_right = 1079.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 12 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="CanvasLayer/Intro/Panel"]
margin_left = 436.0
margin_top = 101.0
margin_right = 560.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 12 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="CanvasLayer/Intro/Panel"]
margin_left = 218.0
margin_top = 99.0
margin_right = 352.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 12 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Intro/Panel"]
margin_left = 604.0
margin_top = 96.0
margin_right = 856.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 12 )
placeholder_text = "127.0.0.1"

[node name="Status" type="Label" parent="CanvasLayer/Intro/Panel"]
margin_left = 221.0
margin_top = 170.0
margin_right = 567.0
margin_bottom = 219.0
custom_fonts/font = ExtResource( 12 )

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource( 15 )
[connection signal="pressed" from="CanvasLayer/Intro/Panel/Start" to="CanvasLayer/Intro" method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/Intro/Panel/Join" to="CanvasLayer/Intro" method="_on_Join_pressed"]
[connection signal="pressed" from="CanvasLayer/Intro/Panel/Host" to="CanvasLayer/Intro" method="_on_Host_pressed"]
